force-app/main/default/objects/Opportunity/fields/Deal_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Source__c</fullName>
    <label>Deal Source</label>
    <description>How this opportunity originated. Used for pipeline attribution reporting.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>