force-app/main/default/objects/Opportunity/fields/Expected_Contract_Value__c.field-meta.xml
<!--
  Custom currency field on Opportunity.
  Captures the expected total contract value, which may differ from the
  Opportunity "Amount" field (Amount often represents annual or one-time value,
  while this captures the full contract).

  Key concepts:
  - "type: Currency" renders as a currency input with the org's default currency
  - "precision" = total digits allowed (including decimal), "scale" = decimal places
  - precision 18, scale 2 = up to 9,999,999,999,999,999.99
-->
<CustomField>
    <fullName>Expected_Contract_Value__c</fullName>
    <label>Expected Contract Value</label>
    <description>Total expected contract value over the full term. May differ from the one-time or annual Amount.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>