force-app/main/default/objects/Opportunity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <description>The next concrete action for this deal. Required when moving to Proposal stage or beyond.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>